--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -7,6 +7,7 @@
   justify-content: space-between;
   padding: 20px;
   gap: 15px;
+  margin-top: 60px;
 }
 .left-side {
   width: 70%;
@@ -26,7 +27,7 @@
 hr {
   background-color: #f3f3f3;
 }
-.alert-to-add {
+.alert-empty-basket {
   margin: 110px auto;
   width: max-content;
   background-color: #f3f3f3;
@@ -63,4 +64,19 @@ hr {
   text-align: center;
   color: #000;
   border-radius: 3px;
+}
+@media screen and (max-width: 700px) {
+  .container {
+    flex-direction: column;
+    padding: 20px 10px;
+  }
+  .left-side {
+    width: 100%;
+  }
+  .left-side img {
+    height: 40px;
+  }
+  .right-side {
+    width: 100%;
+  }
 }
