--- a/src/components/CartProduct.css
+++ b/src/components/CartProduct.css
@@ -5,6 +5,9 @@
   gap: 20px;
   padding: 15px;
 }
+.cart-product-price {
+  margin-top: 15px;
+}
 .cart-product-img {
   display: flex;
   justify-content: center;
@@ -35,4 +38,16 @@
 }
 .cart-prodcut-info button:active {
   transform: scale(0.8);
+}
+
+@media screen and (max-width: 700px) {
+  .cart-product {
+    flex-direction: column;
+    font-size: 12px;
+    padding: 15px 0;
+  }
+  .cart-product-star img {
+    width: 15px;
+    height: 15px;
+  }
 }
