--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -7,6 +7,10 @@ header {
   padding: 10px 20px;
   color: white;
   height: 60px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
 }
 header a {
   color: white;
@@ -15,14 +19,19 @@ header a {
 header .logo {
   width: 60px;
   height: 30px;
+  position: absolute;
+  top: 20px;
+  left: 15px;
 }
 .header-search {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 60%;
-  height: 30px;
+  margin-right: 30px;
+  height: 25px;
+  width: 400px;
 }
+
 .header-searchInput {
   width: 96%;
   height: 100%;
@@ -37,9 +46,23 @@ header .logo {
   padding: 5px;
   background-color: #cd9042;
 }
-@media (max-width: 1000px) {
+@media screen and (max-width: 900px) {
   .header-search {
-    width: 40%;
+    width: 200px;
+  }
+}
+@media screen and (max-width: 660px) {
+  .header-search {
+    width: fit-content;
+    margin-right: 0;
+  }
+  .header-searchInput {
+    display: none;
+  }
+  .header-searchIcon {
+    width: 25px;
+    height: 25px;
+    border-radius: 4px;
   }
 }
 .header-nav {
@@ -48,7 +71,11 @@ header .logo {
   align-items: center;
   gap: 25px;
 }
-
+@media screen and (max-width: 470px) {
+  .header-nav {
+    gap: 13px;
+  }
+}
 .header-nav span {
   display: block;
 }
