--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -4,7 +4,7 @@
   flex-grow: 1;
   min-width: 300px;
   background-color: #fff;
-  padding: 20px 20px 10px;
+  padding: 20px 20px 0%;
   margin: 10px;
   border-radius: 5px;
   transition: background 0.2s ease-in-out;
@@ -16,8 +16,16 @@
 .prodcut-title {
   font-size: 14px;
   margin-bottom: 10px;
-  height: 60px;
+  height: 40px;
   max-width: 600px;
+}
+@media screen and (max-width: 600px) {
+  .prodcut-title {
+    height: min-content;
+  }
+}
+.product-price {
+  margin-top: 15px;
 }
 .product-info .rating {
   margin-top: 10px;
@@ -28,7 +36,8 @@
 }
 .product .product-img {
   margin: auto;
-  width: 200px;
+  width: 180px;
+  height: 180px;
   transition: transform 0.3s ease;
 }
 .product:hover .product-img {
@@ -36,7 +45,19 @@
 }
 .product .product-img img {
   width: 100%;
-  height: 200px;
+  height: 100%;
+}
+@media screen and (max-width: 450px) {
+  .product-img {
+    width: 120px;
+    height: 120px;
+    overflow: hidden;
+  }
+  .product-img img {
+    width: 150px;
+    height: 150px;
+    margin-top: 25px;
+  }
 }
 .product button {
   display: block;
