--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -4,61 +4,79 @@
   flex-grow: 1;
   min-width: 300px;
   background-color: #fff;
-  padding: 20px 20px 0%;
+  padding: 20px 20px 0;
   margin: 10px;
   border-radius: 5px;
   transition: background 0.2s ease-in-out;
+}
+@media screen and (max-width: 600px) {
+  .product {
+    height: 400px;
+  }
 }
 .product:hover {
   background-color: rgb(35, 35, 35);
   color: #fff;
 }
+
 .prodcut-title {
   font-size: 14px;
   margin-bottom: 10px;
   height: 40px;
   max-width: 600px;
 }
+
 @media screen and (max-width: 600px) {
   .prodcut-title {
-    height: min-content;
+    height: auto; /* Use auto for better handling on small screens */
   }
 }
+
 .product-price {
   margin-top: 15px;
 }
+
 .product-info .rating {
   margin-top: 10px;
 }
+
 .product-info .rating img {
   width: 20px;
   margin-right: 3px;
 }
+
 .product .product-img {
   margin: auto;
-  width: 180px;
-  height: 180px;
+  width: 100%; /* Adjust width to 100% to fit the container */
+  height: auto; /* Maintain aspect ratio */
+  max-width: 180px; /* Ensure it does not exceed 180px */
   transition: transform 0.3s ease;
 }
+
 .product:hover .product-img {
   transform: scale(1.1);
 }
+
 .product .product-img img {
   width: 100%;
-  height: 100%;
+  height: auto; /* Maintain aspect ratio */
 }
+
 @media screen and (max-width: 450px) {
-  .product-img {
+  .product .product-img {
     width: 120px;
     height: 120px;
+    margin-top: 40px;
     overflow: hidden;
   }
-  .product-img img {
-    width: 150px;
-    height: 150px;
-    margin-top: 25px;
+
+  .product .product-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensure image covers the area */
   }
 }
+
 .product button {
   display: block;
   margin: 20px auto 0;
